# ad

./: CMakeLists.txt  README.md  conanfile.py
include/ad/: differentiation.h  dual.h
include/ad/detail/differentiation/: eigen.h  forward.h
include/ad/detail/dual/: dual.h  eigen.h  math.h
src/examples/: CMakeLists.txt  demo.cpp  demo_eigen.cpp  linear_regression.cpp
test/: CMakeLists.txt
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
